--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-swipe-list-view": "^3.2.6",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12"
   },
