--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.1.5",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-clipboard": "^1.0.1",
     "expo-splash-screen": "~0.8.0",
     "expo-updates": "~0.4.0",
     "react": "16.13.1",
@@ -22,6 +23,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-swipe-list-view": "^3.2.6",
